Changing java version